--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             </div>
             
             <div class="border-t border-gray-700 pt-8 text-center">
-                <p class="text-sm text-gray-500 font-bold">&copy; 2026 Koyoi Production. All Rights Reserved.</p>
+                <p class="text-sm text-gray-500 font-bold">&copy; © 2026 GlowEngine合同会社. All Rights Reserved</p>
             </div>
         </div>
     </footer>
@@ -428,3 +428,4 @@
     </script>
 </body>
 </html>
+
