--- a/index.html
+++ b/index.html
@@ -209,33 +209,33 @@
             
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
                 
-                <!-- Card 1: 個別戦略設計 (パーソナルブランディング) -->
+                <!-- Card 1: 戦略的パーソナルブランディング -->
                 <div class="bg-white rounded-[30px] p-8 text-left border-t-8 border-koyoi-pink-dark shadow-xl hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-1">
                     <div class="text-4xl mb-4 bg-koyoi-pink/50 inline-block p-3 rounded-xl">📊</div>
                     <h3 class="text-2xl font-extrabold text-koyoi-pink-dark mb-2">1. 個別戦略設計</h3>
                     <h4 class="text-lg font-bold text-gray-800 mb-4">緻密なパーソナルブランディング</h4>
                     <p class="text-gray-600 font-medium leading-relaxed">
-                        タレント一人ひとりの強み、ターゲット層、市場動向を分析し、最適なキャラクター設定と成長ロードマップを共同で作成します。
+                        タレントの持つ唯一無二の個性を市場で際立たせ、長期的に愛されるブランドへと育て上げるための戦略を専門チームが構築します
                     </p>
                 </div>
 
-                <!-- Card 2: 最先端技術支援 (ハイクオリティな制作環境) -->
+                <!-- Card 2: 案件獲得 & ビジネス展開 -->
                 <div class="bg-white rounded-[30px] p-8 text-left border-t-8 border-koyoi-purple-dark shadow-xl hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-1">
                     <div class="text-4xl mb-4 bg-koyoi-purple/50 inline-block p-3 rounded-xl">⚙️</div>
                     <h3 class="text-2xl font-extrabold text-koyoi-purple-dark mb-2">2. 最先端技術支援</h3>
                     <h4 class="text-lg font-bold text-gray-800 mb-4">ハイクオリティな制作環境</h4>
                     <p class="text-gray-600 font-medium leading-relaxed">
-                        高解像度モデル、最新トラッキングシステム、プロ仕様のレコーディング環境など、最高のクオリティで活動できる環境を提供します。
+                        企業案件、タイアップ企画、メディア出演などを積極的に獲得し、グッズ販売やデジタル収益化を通じて安定的な活動基盤を確立します。
                     </p>
                 </div>
 
-                <!-- Card 3: メンタル&キャリアサポート (活動継続支援) -->
+                <!-- Card 3: 継続的なクリエイティブサポート -->
                 <div class="bg-white rounded-[30px] p-8 text-left border-t-8 border-koyoi-pink-dark shadow-xl hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-1">
                     <div class="text-4xl mb-4 bg-koyoi-pink/50 inline-block p-3 rounded-xl">🤝</div>
                     <h3 class="text-2xl font-extrabold text-koyoi-pink-dark mb-2">3. メンタル&キャリアサポート</h3>
                     <h4 class="text-lg font-bold text-gray-800 mb-4">長期的な活動継続支援</h4>
                     <p class="text-gray-600 font-medium leading-relaxed">
-                        専門スタッフによるメンタルケアや、企業案件・グッズ展開など、長期的に活躍するための包括的なキャリアサポートを実施します。
+                        活動を続けるためのタレントのトータルケアはもちろん、コラボ企画、イベント運営、ファンコミュニティ構築を支援し、クリエイティブの継続を支えます。
                     </p>
                 </div>
             </div>
@@ -428,4 +428,5 @@
     </script>
 </body>
 </html>
+
 
